fix: removed chrome scrollbars that were not needed

--- a/portfolio/app/css/aboutMe.module.css
+++ b/portfolio/app/css/aboutMe.module.css
@@ -44,9 +44,11 @@
     flex-direction: column;
     justify-content: center;
     margin: 0;
-    gap: 0.5rem;
 }
 
+.bulletPoints li {
+    margin: 0.25rem;
+}
 
 .titleGif {
     max-width: 30%;
