--- a/portfolio/app/css/fileExplorer.module.css
+++ b/portfolio/app/css/fileExplorer.module.css
@@ -25,12 +25,12 @@
 .tree {
     color: black;
     height: 100%;
-    width: 15rem;
-    min-width: 15rem;
+    width: 15.5rem;
+    min-width: 15.5rem;
     /* width: fit-content; */
 
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     margin: 0;
     padding: 0rem;
