--- a/portfolio/app/css/fileOverview.module.css
+++ b/portfolio/app/css/fileOverview.module.css
@@ -7,7 +7,7 @@
     font-family: var(--primary-font);
     margin: 0.5rem;
     /* background-color: #bbbebf; */
-    overflow-x: scroll;
+
 }
 
 .root p {
@@ -89,6 +89,7 @@
     flex: 1;
     width: 100%;
     overflow: auto;
+
 }
 
 .description p {
@@ -128,7 +129,7 @@
     padding: 0;
     padding-left: 0.5rem;
     height: 50%;
-    overflow-y: scroll;
+    overflow-y: auto;
 
 }
 
@@ -151,14 +152,18 @@
 .readmeBackground {
     background-color: var(--xp-silver-light);
     border-radius: 0.5rem;
+
+
 }
+
+
 
 .readMeWrapper {
     display: flex;
     height: 100%;
     padding: 1rem;
     padding-bottom: 10rem;
-    overflow: auto;
+    overflow-y: auto;
 
 }
 
@@ -180,12 +185,18 @@
 }
 
 /* Preview pic small */
+.picsOuter {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .pics {
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    overflow-y: auto;
     align-items: center;
     gap: 0.5rem;
 
@@ -198,6 +209,7 @@
     width: 100%;
     aspect-ratio: 3 / 4;
     object-fit: cover;
+
 }
 
 .pic, .picWrap, .pics, .previewRoot {
@@ -290,4 +302,12 @@
     left: 2.5%;
     padding: 1rem 1rem;
     z-index: 3;
+}
+
+/* Phone settings */
+@media screen and (max-width: 1500) {
+    .root {
+        overflow-x: auto;
+    }
+
 }
