--- a/portfolio/app/css/pdf.module.css
+++ b/portfolio/app/css/pdf.module.css
@@ -35,7 +35,7 @@
 .pdfRoot {
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .loadingText {
